--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",                          
+    "build": "vite build",                  
+    "start": "node index.js",               
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
